--- a/scripts/data_demo.ipynb
+++ b/scripts/data_demo.ipynb
@@ -2,6 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1ba59b1dbac89a68",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Enviorment Installation \n",
     "In order to load dataset and run the code, you need to install the following packages:\n",
@@ -15,15 +19,19 @@
     "# Dataset Download \n",
     "There are three available datasets for link prediction: Cora, Pubmed and Arxiv. Please download them from the following link:\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1ba59b1dbac89a68"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "699679a4b0e356e9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-25T11:01:16.690421Z",
+     "start_time": "2023-09-25T11:01:16.674493Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from yacs.config import CfgNode as CN\n",
@@ -53,23 +61,25 @@
     "cfg.dataset.arxiv = CN()\n",
     "cfg.dataset.arxiv.root = '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE' #'PATH_TO_DATASET' \n",
     "cfg.dataset.arxiv.abs_ti = cfg.dataset.arxiv.root + '/dataset/ogbn_arxiv_orig/titleabs.tsv'"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-25T11:01:16.690421Z",
-     "start_time": "2023-09-25T11:01:16.674493Z"
-    }
-   },
-   "id": "699679a4b0e356e9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b3eec148f590c63d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-25T09:02:53.852292Z",
+     "start_time": "2023-09-25T09:02:53.826469Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "CfgNode({'dataset': CfgNode({'cora': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'original': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_orig/cora', 'papers': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_orig/mccallum/cora/papers', 'extractions': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_andrew_mccallum/extractions/', 'lm_model_name': 'microsoft/deberta-base'}), 'pubmed': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'original': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/PubMed_orig/data/', 'abs_ti': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/PubMed_orig/pubmed.json'}), 'arxiv': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'abs_ti': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/ogbn_arxiv_orig/titleabs.tsv'})})})"
+      "text/plain": [
+       "CfgNode({'dataset': CfgNode({'cora': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'original': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_orig/cora', 'papers': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_orig/mccallum/cora/papers', 'extractions': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/cora_andrew_mccallum/extractions/', 'lm_model_name': 'microsoft/deberta-base'}), 'pubmed': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'original': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/PubMed_orig/data/', 'abs_ti': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/PubMed_orig/pubmed.json'}), 'arxiv': CfgNode({'root': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE', 'abs_ti': '/pfs/work7/workspace/scratch/cc7738-prefeature/TAPE/dataset/ogbn_arxiv_orig/titleabs.tsv'})})})"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -78,19 +88,15 @@
    ],
    "source": [
     "cfg"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-25T09:02:53.852292Z",
-     "start_time": "2023-09-25T09:02:53.826469Z"
-    }
-   },
-   "id": "b3eec148f590c63d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "159de8ae31274dd3",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def seed_everything(SEED=0):\n",
@@ -99,15 +105,15 @@
     "        torch.cuda.manual_seed(SEED)\n",
     "    np.random.seed(SEED)  # Numpy module.\n",
     "    random.seed(SEED)  # Python random module."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "159de8ae31274dd3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "20ec6a5fb2c36d25",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def load_ab_ti(path, fn):\n",
@@ -120,15 +126,19 @@
     "        elif line.split(':')[0] == 'Abstract':\n",
     "            ab = line\n",
     "    return ti, ab"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "20ec6a5fb2c36d25"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "df6f1d693f2cba8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-25T09:02:54.495451Z",
+     "start_time": "2023-09-25T09:02:54.287303Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def get_raw_text_cora(cfg, use_text=False, seed=0):\n",
@@ -173,25 +183,17 @@
     "            no_ab_or_ti += 1\n",
     "    print(f\"found {founded}/{whole} papers, {no_ab_or_ti} no ab or ti.\")\n",
     "    return data, text\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-25T09:02:54.495451Z",
-     "start_time": "2023-09-25T09:02:54.287303Z"
-    }
-   },
-   "id": "df6f1d693f2cba8"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "683453caa9c292cf",
    "metadata": {
     "collapsed": false
    },
-   "id": "683453caa9c292cf"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -210,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
